structmeta-tests/tests/compile_fail/struct_meta/unexpected_named_argument.rs
#[structmeta_tests::attr_required_name_value(value_x = 10)]
fn my_func() {}

fn main() {}
